--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -16,6 +16,9 @@ phases:
     commands:
       #commands compile source code
       - echo Running maven commaned to execute tests
+      - cd drivers
+      - pwd
+      - chmod +x chromedriver
       - mvn clean test -Dspring.profiles.active=DEV
       - echo Build started on `date` 
 
