--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -19,20 +19,18 @@ phases:
       #commands compile source code
       - echo Running maven commaned to execute tests
       - cd drivers
-     # - pwd
       - chmod 777 chromedriver
       - chmod +x chromedriver
       - cd ..
-     # - pwd
-      - mvn clean test -Dspring.profiles.active=DEV
       - echo Build started on `date` 
+      - docker-compose -f  docker-compose.yml up -d
+      - mvn clean test -Dspring.profiles.active=DEV
 
 
       
   post_build:
     commands:
       - echo Build completed on `date`
-      - 
       
 reports:   
   tessweb-ReportGroup: #Cucumber reports from json plugin
