--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables: #Parameters related to the Test Runner and for the Project to parse jSON report to qTest
-    REGION1: "us-west-2"
+    REGION: "us-west-2"
     environment: "DEV"
     contactInitials: "JGS"
     requestedParser: "Cucumber_V2"
@@ -28,14 +28,12 @@ phases:
       - cdk --version
       - pip install --upgrade pip
       - pip install requests
-      #- npm install -g yarn
-     # - yarn --version
-      #- pip install --upgrade pip
       
   build:
     commands:
       #commands compile source code
       - echo Running maven commaned to execute tests
+      - echo build number $CODEBUILD_BUILD_NUMBER
       - cd drivers
       - chmod 777 chromedriver
       - chmod +x chromedriver
@@ -48,8 +46,10 @@ phases:
 
       
   post_build:
+    on-failure: CONTINUE
     commands:
-      - echo Build completed on `date`
+      - echo Run Python script to upload report to qTest
+      - python uploadscript.py         
       
 reports:   
   tessweb-ReportGroup: #Cucumber reports from json plugin
