--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -27,7 +27,7 @@ phases:
       - aws --version
       - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
       - sudo yum -y install unzip
-      - unzip terraform_${TERRAFORM_VER}_linux_amd64.zip
+      - unzip terraform_1.0.5_linux_amd64.zip
       - sudo mv terraform /usr/local/bin/
       - terraform version
       - npm install -g aws-cdk
