--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -26,9 +26,9 @@ phases:
     commands:
       - aws --version
       - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
-      - sudo yum -y install unzip
+      - yum -y install unzip
       - unzip terraform_1.0.5_linux_amd64.zip
-      - sudo mv terraform /usr/local/bin/
+      - mv terraform /usr/local/bin/
       - terraform version
       - npm install -g aws-cdk
       - cdk --version
