--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -26,7 +26,8 @@ phases:
     commands:
       - aws --version
       - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
-      - yum -y install unzip
+      #- yum -y install unzip
+      -- unzip version
       - unzip terraform_1.0.5_linux_amd64.zip
       - mv terraform /usr/local/bin/
       - terraform version
