--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -26,8 +26,9 @@ phases:
     commands:
       - aws --version
       - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
-      #- yum -y install unzip
-      #- unzip version
+      - pip install --upgrade pip
+      - pip install unzip
+      - unzip version
       - unzip terraform_1.0.5_linux_amd64.zip
       - mv terraform /usr/local/bin/
       - terraform version
