--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -27,8 +27,8 @@ phases:
       - aws --version
       - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
       - pip install --upgrade pip
-      - pip install unzip
-      - unzip version
+     # - pip install unzip
+     # - unzip version
       - unzip terraform_1.0.5_linux_amd64.zip
       - mv terraform /usr/local/bin/
       - terraform version
