--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -29,6 +29,9 @@ phases:
       - cdk --version
       - pip install --upgrade pip
       - pip install requests
+      - wget https://releases.hashicorp.com/terraform/1.0.5/terraform_1.0.5_linux_amd64.zip
+      - unzip terraform_1.0.5_linux_amd64.zip
+      - mv terraform /usr/local/bin/
       - terraform --version
       
   build:
@@ -41,12 +44,14 @@ phases:
       - chmod +x chromedriver
       - cd ..
       - echo Build started on `date` 
+      - terraform init
+      - terraform plan
+      - terraform apply -auto-approve
      # - docker-compose -f  docker-compose.yml up -d
       - mvn clean test -Dspring.profiles.active=DEV
       #- docker-compose -f  docker-compose.yml down -d
-
-
-      
+      - terraform destroy -auto-approve
+           
   post_build:
     on-failure: CONTINUE
     commands:
