--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -46,7 +46,8 @@ phases:
       - echo Build started on `date` 
       - terraform init
       - terraform plan
-      - terraform apply -auto-approve
+     # - terraform apply -auto-approve
+      - aws s3 cp  s3://tess-web-artifacts/terraform/tess-infra.tfstate .
      # - docker-compose -f  docker-compose.yml up -d
       - mvn clean test -Dspring.profiles.active=DEV
       #- docker-compose -f  docker-compose.yml down -d
