--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -68,7 +68,7 @@ reports:
 artifacts:
     files:
       - target/cucumber-reports/adv/cucumber-json-testng-report.json
-      - tess-infra.tfstate
+      - terraform.tfstate
   #files: imagedefinitions.json
    # - '**/*'
  # base-directory: 'dist'
