--- a/test-buildspec.yaml
+++ b/test-buildspec.yaml
@@ -52,7 +52,7 @@ phases:
       - mvn clean test -Dspring.profiles.active=DEV
       #- docker-compose -f  docker-compose.yml down -d
       - terraform destroy -auto-approve
-      - aws s3 cp tess-infra.tfstate s3://tess-web-artifacts/terraform/terraform.tfstate.afterdestroy
+      #- aws s3 cp tess-infra.tfstate s3://tess-web-artifacts/terraform/terraform.tfstate.afterdestroy
            
   post_build:
     on-failure: CONTINUE
